--- a/ponder.html
+++ b/ponder.html
@@ -13,27 +13,31 @@
 <meta name="author" content="Jane Doe">
 
     <div id="content">
-        <h1>HTML, CSS, and JS</h1>
-        <p>The foundational technologies that power websites and web applications</p>
-        <hr>
-        <img src="https://wddbyui.github.io/wdd131/images/trifecta.png" alt="JS, CSS, and HTML logos">
-        <div id="topics">
-            <h2>HyperText Markup Language</h2>
-            <ul class="list">
-                <li>Defines the structure and content of a web page.</li>
-                <li>Without HTML there's nothing for the browser to display.</li>
-            </ul>
-            <h2>Cascading Style Sheets</h2>
-            <ul class="list">
-                <li>Controls how the HTML elements look.</li>
-                <li>Without CSS pages look plain and unstyled.</li>
-            </ul>
-            <h2>JavaScript</h2>
-            <ul class="list">
-                <li>Adds interactivity and dynamic behavior.</li>
-                <li>Without JavaScript nothing on the page responds dynamically to user actions.</li>
-            </ul>
+        <div class="inner-box">
+            <h1>HTML, CSS, and JS</h1>
+            <p>The foundational technologies that power websites and web applications</p>
+            <hr>
+            <img src="https://wddbyui.github.io/wdd131/images/trifecta.png" alt="JS, CSS, and HTML logos">
+            <div id="topics">
+                <h2>HyperText Markup Language</h2>
+                <ul class="list1">
+                    <li>Defines the structure and content of a web page Without .</li>
+                    <li>HTML there's nothing for the browser to display.</li>
+                </ul>
+                <h2>Cascading Style Sheets</h2>
+                <ul class="list2">
+                    <li>Controls how the HTML elements look.</li>
+                    <li>Without CSS pages look plain and unstyled.</li>
+                </ul>
+                <h2>JavaScript</h2>
+                <ul class="list3">
+                    <li>Adds interactivity and dynamic behavior.</li>
+                    <li>Without JavaScript nothing on the page </li>
+                    <li>responds dynamically to user actions.</li>
+                </ul>
+            </div>
         </div>
+        
     </div>
 
 </body>
